# Game-Of-Life

./: .gitignore  CMakeLists.txt  CMakePresets.json  GameOfLife.cpp  README.md  vcpkg.json
src/: Adjacents.h  CMakeLists.txt  Coordinates.h  GameOfLife.cpp  GameOfLife.h  GameState.h  Generation.h
